[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/objs/ammo_rocket.obj" type="ArrayMesh" id=1]
[ext_resource path="res://src/player/playerRocket.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 2.78921

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.309524, 0.604762, 0.852381 )
colors = PoolColorArray( 1, 0.676758, 0, 1, 1, 0.03125, 0.03125, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_align_y = true
direction = Vector3( 0, 0, 1 )
spread = 33.39
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 1, 1, 1 )

[sub_resource type="SphereShape" id=9]
radius = 13.2363

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.0285714, 0.47619, 0.661905, 0.8 )
colors = PoolColorArray( 1, 0.855122, 0.0898438, 1, 1, 0.0078125, 0.0078125, 1, 0.977051, 0.977051, 0.977051, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
color_ramp = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=14]
material = SubResource( 13 )
size = Vector3( 5, 5, 5 )

[node name="playerRocket" type="Area" groups=[
"player",
"rocket",
]]
script = ExtResource( 2 )

[node name="bulletTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 2 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.16812 )
amount = 16
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="explosionRadius" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="explosionRadius"]
shape = SubResource( 9 )

[node name="Particles2" type="Particles" parent="explosionRadius"]
emitting = false
amount = 128
one_shot = true
speed_scale = 3.0
explosiveness = 0.61
randomness = 1.0
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )

[node name="afterExplosion" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_playerRocket_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_playerRocket_body_entered"]
[connection signal="timeout" from="bulletTimer" to="." method="_on_bulletTimer_timeout"]
[connection signal="area_entered" from="explosionRadius" to="." method="_on_explosionRadius_area_entered"]
[connection signal="timeout" from="afterExplosion" to="." method="_on_afterExplosion_timeout"]
